--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -54,20 +54,27 @@
         </nav>
     </header>
     <!-- news content-->
+    <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-    <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
+        <h1 style="text-align: center;">Pixel Watch 3 With Brighter Display Launched in India</h1>
     </div>
-    <div class="news_dt news_mar">
-        <div>Date: Aug16,2024</div>
-        <div> Time: 11am</div>
-    </div>
-    <div>
-        <img src="./../../images/pixelwatch.jpeg" alt="" class="news_img">
-        <p class="news_mar">Inside the Pixel Watch 3 has the same Snapdragon W5+ Gen 1 SoC for wearables, the same collection of sensors such as HR monitor , ECG readings, SpO2, skin thermometer and GPS. The new addition is the UWB chip.
-        This means the Pixel Watch 3 is the first Android smartwatch to offer UWB connectivity, making it easier to unlock your phone or find the gadget if you lose it using Google's Find My Device feature. The watch will also be able to unlock your car if it has the feature, of course.
-        The screen gets a slight upgrade. Both the 41 mm and 45mm variants now boast displays capable of 2,000 nits peak brightness, which is a considerable step up from last year's 1,000-nit Pixel Watch 2.</p>
-    </div>
+    <div class="d-t">
+        Date: Aug 16,2024<br>
+           </div>
+<div class="container0">
+
+    <img src="./../../images/pixelwatch.jpeg"style="height:400px;margin:20px">
+    <br>
+<p>
+    Inside the Pixel Watch 3 has the same Snapdragon W5+ Gen 1 SoC for wearables, the same collection of sensors such as HR monitor , ECG readings, SpO2, skin thermometer and GPS. The new addition is the UWB chip.
+    This means the Pixel Watch 3 is the first Android smartwatch to offer UWB connectivity, making it easier to unlock your phone or find the gadget if you lose it using Google's Find My Device feature. The watch will also be able to unlock your car if it has the feature, of course.
+    The screen gets a slight upgrade. Both the 41 mm and 45mm variants now boast displays capable of 2,000 nits peak brightness, which is a considerable step up from last year's 1,000-nit Pixel Watch 2.
+    The available colors for both variants are Matte Black Aluminum with an Obsidian strap and Polished Silver Aluminum with a Porcelain strap. The 41mm also has the Champagne Gold Aluminum paint job with a Hazel band, while the 45mm gets the Matte Hazel Aluminum option with the same Hazel band.
+    The 41mm Pixel Watch 3 with Bluetooth and Wi-Fi will go for $349, while the same configuration for the 45mm model will set you back $399. LTE connectivity adds $100 to the standard price.
+    In UK the prices £349/399 with a £100 extra for the LTE modem, while those in continental Europe are looking at €399/€449 and €100 extra for the cellular version. Shipping in all markets starts September 10.
+</p>
+</div>
     <!-- footer has been started from here -->
 
     <footer>
