--- a/pages/tech/tech2.html
+++ b/pages/tech/tech2.html
@@ -57,31 +57,23 @@
     <div class="readmore-heading-details">
         <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-        <h1 style="text-align: center;">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h1>
+        <h1 style="text-align: center;">Pixel 9 Pro and Pixel 9 Pro XL launched.</h1>
     </div>
     <div class="d-t">
-        Date: Aug 8,2024<br>
+        Date: Aug 16,2024<br>
            </div>
 <div class="container0">
 
-    <img src="./../../images/rohitsharma"style="height:400px;margin:20px">
+    <img src="./../../images/pixel-9-pro-series_b46d56.webp"style="height:400px;margin:20px">
     <br>
- <span style="font-size:12px;text-align: center;">India captain Rohit Sharma at the end of the third ODI against Sri Lanka in Colombo.</span>
- <br>
 <p>
-    NEW DELHI: After India's series defeat by Sri Lanka, captain Rohit Sharma voiced his worries about the Men in Blue's lack of dominance against spin and their failure to execute enough sweep shots on a challenging surface.
-The hosts prevailed resoundingly, winning the series 2-0. This is the first time Sri Lanka has triumphed over India in an ODI series in the last 27 years.
-In the third ODI of the series, Sri Lanka defeated India by 110 runs on Wednesday at the R Premadasa Stadium thanks to innings of 96 runs from Avishka Fernando and five wickets from Dunith Wellalage.
-</p>
-<p>
-    This was India's first ODI assignment following their devastating home loss to Australia in the ICC CRICKET CUP  final in November of last year, and it came ahead of the 
-    Champions Trophy, which would take place in Pakistan next year, as per ANI.
-</p>
-<p>
-    "They were consistent with sweeps, taking their chances. There were not a lot of runs scored down the ground. They did not use the feet as much as we expected. It was about using sweeps and piercing that deep square leg and midwicket field. That is something we failed to do as a batting unit. We did not play enough sweeps, reverse sweeps, or paddle sweeps, and used our feet too much. That was the difference," said Rohit.
-</p>
-<p>The Indian captain acknowledged that the Men in Blue were under siege from Lankan spinners rather than dominating against them. Additionally, he stated that players are allowed to devise their own strategies for overcoming spin and playing on turning tracks.
-    "It starts with your training, When you get to your sessions, I can see the guys are working hard in the nets whenever we get the opportunity to train as well. I do not see there being a lack of effort when we want to try and play different shots," he added.
+    Google Pixel 9 Pro XL has a 6.8-inch Super Actua display with a peak brightness of 3,000 nits and 1344 x 2992 pixels resolution. It is an LTPO OLED panel with 486 ppi, 20:9 aspect ratio and 1Hz-120Hz refresh rate. The smartphone is powered by Google Tensor G4 SoC paired with a Titan M2 security coprocessor, 16GB RAM and up to 512GB storage.
+    On the camera front, Google Pixel 9 Pro XL comes with a 50MP Octa PD wide camera, a 48MP Quad PD ultrawide shooter and a 48MP Quad PD telephoto camera. There is a 42MP Dual PD selfie camera on the front.
+    The device houses a 5,060mAh battery and comes with IP68 dust and water resistance rating.
+    Google Pixel 9 is equipped with a 6.3-inch Actua display with a peak brightness of 2,700 nits. The full-HD (1080 x 2424 pixels at 422 PPI) OLED display has 20:9 aspect ratio and 60-120Hz refresh rate.
+    Under the hood is Google Tensor G4 SoC that is specially designed to handle AI and machine learning tasks. The chipset is coupled with a Titan M2 security coprocessor, 12GB RAM and up to 256GB storage.
+    As far as the camera is concerned, the phone gets a 50MP Octa PD wide camera with ƒ/1.68 aperture and 82-degree field of view. There is an ultrawide camera that packs a 48MP Quad PD sensor with an ultrawide lens that has ƒ/1.7 aperture and 123-degree field of view.
+    For selfies, the handset features a 10.5MP Dual PD selfie camera. The device is backed by a 4,700mAh battery and comes with IP68 dust and water resistance rating.
 </p>
 </div>
     <!-- footer has been started from here -->
