--- a/pages/tech/tech4.html
+++ b/pages/tech/tech4.html
@@ -54,20 +54,32 @@
         </nav>
     </header>
     <!-- news content-->
+    <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-    <div class="news-con">
-        <div class="text-center">SpaceX’s mission to explore polar orbit first for spaceflight.</div>
+        <h1 style="text-align: center;">SpaceX’s mission to explore polar orbit first for spaceflight.</h1>
     </div>
-    <div class="news_dt">
-        <div>Date: Aug16,2024</div>
-        <div> Time: 11am</div>
-    </div>
-    <div>
-        <img src="./../../images/tech img 2.avif" alt="" class="news_img">
-        <div>
-            
-        </div>
-    </div>
+    <div class="d-t">
+        Date: Aug 16,2024<br>
+           </div>
+<div class="container0">
+
+    <img src="./../../images/tech img 2.avif"style="height:400px;margin:20px">
+    <br>
+<p>
+    SpaceX plans to make spaceflight history later this year by launching the first crewed mission to explore Earth's polar regions.
+    That four-person flight, which SpaceX announced today (Aug. 12), is called Fram2, in honor of the Norwegian ship that made pioneering voyages to the Arctic and Antarctic between 1893 and 1912.
+    "Fram2 will be commanded by Chun Wang, an entrepreneur and adventurer from Malta," SpaceX wrote in a mission description today. "Wang aims to use the mission to highlight the crew's explorational spirit, bring a sense of wonder and curiosity to the larger public, and highlight how technology can help push the boundaries of exploration of Earth and through the mission's research."
+    Joining Wang on Fram2 are Jannicke Mikkelsen from Norway, who will serve as vehicle commander; Eric Philips of Australia, the vehicle pilot; and Germany's Rabea Rogge, mission specialist. All four are spaceflight rookies, according to SpaceX.
+    If all goes according to plan, Fram2 will launch atop a Falcon 9 rocket from Florida's Space Coast late this year, sending the quartet to orbit in a Crew Dragon capsule. The spacecraft will not hook up with the International Space Station (ISS) but rather will zoom around Earth solo.
+    "Throughout the 3-to-5-day mission, the crew plans to observe Earth’s polar regions through Dragon’s cupola at an altitude of 425-450 km [249 to 264 miles], leveraging insight from space physicists and citizen scientists to study unusual light emissions resembling auroras," SpaceX wrote in the mission description.
+    "The crew will study green fragments and mauve ribbons of continuous emissions comparable to the phenomenon known as STEVE (Strong Thermal Emission Velocity Enhancement), which has been measured at an altitude of approximately 400-500 km [249 to 311 miles] above Earth's atmosphere," the company added.
+    The Fram2 crew will also study how spaceflight affects the human body; this work will include capturing the first-ever X-ray image of a human in space, according to SpaceX.
+    Fram2 will be SpaceX's sixth private astronaut mission. Previous missions include Inspiration4, a free flyer that launched in September 2021, Ax-1, Ax-2 and Ax-3, flights operated by Houston company Axiom Space that sent people to and from the ISS in April 2022, May 2023 and January to February of this year, respectively, and Polaris Dawn, another free flyer currently scheduled to launch on Aug. 26.
+    Polaris Dawn is the first of three planned missions in the private Polaris Program. All three will be funded and commanded by billionaire tech entrepreneur Jared Isaacman, who did the same for Inspiration4.
+    SpaceX has also launched nine astronaut missions to the ISS for NASA, starting with the Demo-2 test flight to the orbiting lab in 2020.
+</p>
+</div>
     <!-- footer has been started from here -->
 
     <footer>
