--- a/pages/tech/tech3.html
+++ b/pages/tech/tech3.html
@@ -54,20 +54,22 @@
         </nav>
     </header>
     <!-- news content-->
+    <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-    <div class="news-con">
-        <div class="text-center">Vivo,Xiaomi leads as Indian smartphone market in 2024.</div>
+        <h1 style="text-align: center;">Vivo,Xiaomi leads as Indian smartphone market in 2024.</h1>
     </div>
-    <div class="news_dt">
-        <div>Date: Aug16,2024</div>
-        <div> Time: 11am</div>
-    </div>
-    <div>
-        <img src="./../../images/vivo.jpeg" alt="" class="news_img">
-        <div>
-            
-        </div>
-    </div>
+    <div class="d-t">
+        Date: Aug 16,2024<br>
+           </div>
+<div class="container0">
+
+    <img src="./../../images/vivo.jpeg"style="height:400px;margin:20px">
+    <br>
+<p>
+   Despite being the fourth consecutive quarter of YoY shipment growth, muted consumer demand and rising average selling prices continue to hinder a swift annual recovery.While the average selling price of smartphones increased by 2.8%, there was a decline on a quarter-over-quarter basis. The most significant drop was observed in the entry-level segment, which saw a 36% YoY decline, reducing its market share to 14% from 22% a year ago. Xiaomi maintained its lead in this segment, followed by Poco and Realme.In the mass-budget segment, shipments grew by 8% YoY, with the segment’s share marginally increasing to 44% from 42%. The top three brands—Xiaomi, Realme, and Vivo—accounted for 60% of this segment.The mid-premium segment saw a 25% decline in unit terms, down from 5% a year ago. Vivo led this segment, followed by OnePlus and Oppo.In the premium segment, Apple’s market share increased YoY to 61%, while Samsung’s share rose to 24% from 21%. However, overall, the premium segment accounted for only 2% of the market and experienced a 37% decline in unit terms.Conversely, the super-premium segment continued its growth momentum, recording a 22% increase, with its share rising from 6% to 7%. The iPhone 15/15 Plus and iPhone 14/14 Plus together made up 77% of shipments, followed by the Galaxy S24/S24 Ultra with an 11% share.The trend towards premiumisation in the smartphone market, driven by Apple and Samsung, coupled with rising device costs, is pushing China-based brands to expand beyond the mass market segment. However, the entry-level segment is expected to face challenges this year, even with the launch of affordable 5G phones. Marketing around GenAI smartphones is expected to become more pronounced, with heavy promotional activities surrounding them, Navkendar Singh, Associate Vice President of Devices Research at IDC said.
+</p>
+</div>
     <!-- footer has been started from here -->
 
     <footer>
