--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -54,20 +54,23 @@
         </nav>
     </header>
     <!-- news content-->
+    <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-    <div class="news-con">
-        <div class="text-center">Instagram features to let user keep friends update on their location.</div>
+        <h1 style="text-align: center;">Instagram features to let user keep friends update on their location.</h1>
     </div>
-    <div class="news_dt">
-        <div>Date: Aug16,2024</div>
-        <div> Time: 11am</div>
-    </div>
-    <div>
-        <img src="./../../images/tech img 3.jpg" alt="" class="news_img">
-        <div>
-            
-        </div>
-    </div>
+    <div class="d-t">
+        Date: Aug 16,2024<br>
+           </div>
+<div class="container0">
+
+    <img src="./../../images/tech img 3.jpg"style="height:400px;margin:20px">
+    <br>
+<p>
+    Instagram is reportedly working on allowing users to share real-time updates with their friends on a map. The new feature, which has been in the pipeline since February, is being rolled out for testing in a few small markets, according to a report by The Verge.With this feature, Instagram users can share text or video updates that will be pinned to the locations from where these updates are posted. However, they can only be viewed by users who you follow back or have added to your Close Friends. Similar notes uploaded by your friends will appear alongside each other on the same map. The feature will not be enabled by default for all Instagram users.
+    A similar feature has been available on Snapchat since 2017. But the key difference between the two is that Snap Maps lets users make their map updates public for everyone to see, whereas Instagram seems like it does not want to take that chance. “As always, we are building this feature with safety in mind,” a Meta spokesperson was quoted as saying in the report. It is not yet clear for how long the updates shared on the map will remain there.
+</p>
+</div>
     <!-- footer has been started from here -->
 
     <footer>
