--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -69,6 +69,7 @@
 <p>
     Instagram is reportedly working on allowing users to share real-time updates with their friends on a map. The new feature, which has been in the pipeline since February, is being rolled out for testing in a few small markets, according to a report by The Verge.With this feature, Instagram users can share text or video updates that will be pinned to the locations from where these updates are posted. However, they can only be viewed by users who you follow back or have added to your Close Friends. Similar notes uploaded by your friends will appear alongside each other on the same map. The feature will not be enabled by default for all Instagram users.
     A similar feature has been available on Snapchat since 2017. But the key difference between the two is that Snap Maps lets users make their map updates public for everyone to see, whereas Instagram seems like it does not want to take that chance. “As always, we are building this feature with safety in mind,” a Meta spokesperson was quoted as saying in the report. It is not yet clear for how long the updates shared on the map will remain there.
+    The Meta-owned social media platform has been down this road before. Back in 2012, the platform experimented with a feature that allowed users to view their uploaded photos on a map. But the feature was not popular as the photos on the map could not be shared with other users.
 </p>
 </div>
     <!-- footer has been started from here -->
