--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -57,7 +57,7 @@
     <div class="readmore-heading-details">
         <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
-        <h1 style="text-align: center;">Instagram features to let user keep friends update on their location.</h1>
+        <h1 style="text-align: center;">Anushka, the low-cost humanoid robot built parts from dump yard.</h1>
     </div>
     <div class="d-t">
         Date: Aug 16,2024<br>
