--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -55,7 +55,7 @@
     </header>
     <!-- news content-->
     <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="tech.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
         <h1 style="text-align: center;">Anushka, the low-cost humanoid robot built parts from dump yard.</h1>
     </div>
