--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -55,7 +55,7 @@
     </header>
     <!-- news content-->
     <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="tech.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
         <h1 style="text-align: center;">Pixel Watch 3 With Brighter Display Launched in India</h1>
     </div>
