--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -16,10 +16,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
