--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -98,7 +98,7 @@
                 <ul>
                     <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
-                    <li><a href="">Tech</a></li>
+                    <li><a href="tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
                     <li><a href="">Business</a></li>
                     <li><a href="">Culture</a></li>
