--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -99,7 +99,7 @@
                     <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="tech.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="">Business</a></li>
                     <li><a href="">Culture</a></li>
                     <li><a href="">Education</a></li>
