--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -101,7 +101,7 @@
                     <li><a href="tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="">Culture</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
                     <li><a href="">Education</a></li>
                 </ul>
             </div>
