--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -101,13 +101,13 @@
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
