--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -190,10 +190,10 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../login.html">Login</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
