--- a/pages/tech/tech2.html
+++ b/pages/tech/tech2.html
@@ -93,9 +93,9 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="./../../index.html">Home</a></li>|
-                    <li><a href="./../aboutusPage.html">About</a></li>|
-                    <li><a href="./../contact.html">Contact</a></li>|
+                    <li><a href="./../../index.html">Home</a></li>
+                    <li><a href="./../aboutusPage.html">About</a></li>
+                    <li><a href="./../contact.html">Contact</a></li>
                     <li><a href="./../login.html">Login</a></li>
             </ul>
             </div>
