--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -16,9 +16,9 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>|
-                        <li><a href="./../aboutusPage.html">About</a></li>|
-                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../../index.html">Home</a></li>
+                        <li><a href="./../aboutusPage.html">About</a></li>
+                        <li><a href="./../contact.html">Contact</a></li>
                         <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
@@ -190,9 +190,9 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                        <li><a href="./../../index.html">Home</a></li>|
-                        <li><a href="./../aboutusPage.html">About</a></li>|
-                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../../index.html">Home</a></li>
+                        <li><a href="./../aboutusPage.html">About</a></li>
+                        <li><a href="./../contact.html">Contact</a></li>
                         <li><a href="./../login.html">Login</a></li>
                 </ul>
             </div>
