--- a/pages/tech/tech3.html
+++ b/pages/tech/tech3.html
@@ -42,7 +42,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./../../index.html">world news</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
