--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -16,9 +16,9 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>
-                        <li><a href="./../aboutusPage.html">About</a></li>
-                        <li><a href="./../contact.html">Contact</a></li>
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
                         <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./../../index.html">world news</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
