--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -117,14 +117,11 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="./../../images/cultural6.jpg" alt="">
+                            <img src="./../../images/culture27.avif" alt="">
                             <div class="homepage-Card">
-                                <h3>Meet 11-yr-old Rock goddess who floored Americas Got Talent.
-                                    Americas Got Talent</h3>
-                                <p>
-                                    Americas Got Talent one of televisions biggest reality shows, seemed uncertain of
-                                    what to expect as she opened her routine with an intricate alaap in Natabhairavi a
-                                    grand devotional raga.</p>
+                                <h3>Rakha  Bandhan 2024 Unique Gift Ideas For Your Sister.</h3>
+                                <p> Rakhi, celebrated in August, honors the special bond between brothers and sisters in Hindu culture. Sisters tie a sacred thread on their brothers' wrists, and brothers promise protection in return.
+                                    </p>
                                 <a href="cultural_news6.html">Read more</a>
                             </div>
                         </div>
@@ -156,8 +153,7 @@
                         <a> on Ustad Amjad Ali Khan teaching and philosophy are
                             beyond music.sons of sarod maestro Ustad Amjad Ali Khan, are known for their sarod duets.</a>
                         <hr>
-                        <a> 11-yr-old Rock goddess who floored Americas Got Talent.
-                            Americas Got Talent.opened her routine with an intricate alaap in Natabhairavi a grand devotional raga.</a>
+                        <a> Rakhi, celebrated in August, honors the special bond between brothers and sisters in Hindu culture. Sisters tie a sacred thread on their brothers' wrists, and brothers promise protection in return.</a>
                         <hr>
                         <br>
                 </div>
