--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -18,10 +18,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../loginpage.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -44,13 +44,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
+                    <li><a href="./../Education/Education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
