--- a/pages/worldnews/worldnews_5.html
+++ b/pages/worldnews/worldnews_5.html
@@ -20,7 +20,7 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../index.html">Home</a></li>|
                         <li><a href="./../aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
