--- a/pages/worldnews/worldnews_5.html
+++ b/pages/worldnews/worldnews_5.html
@@ -60,7 +60,7 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a><br>
         <h1>L.A. ballerina sentenced to 12 years in Russian penal colony for 'high treason'</h1>
     </div>
     <div class="d-t">
@@ -76,9 +76,9 @@
             Authorities have not confirmed that figure, and NBC News was not able to independently verify the sum or the nature of the alleged donation.
             Karelina's sentencing, the latest in a series of detentions of citizens of Western nations in Russia, comes against the backdrop of Russia's 2½-year-long war with Ukraine.
             Boyfriend of ballerina Ksenia Karelina speaks out after she is sentenced to 12 years in prison for allegedly organizing fundraisers for Ukraine's military and attending pro-Ukraine rallies.
-
-
         </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gSvgYSUiWmY?si=3gU7ARtcxaAA_vzv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
     </div>
 
     <!-- footer has been started from here -->
