--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -60,7 +60,7 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a><br>
         <h1>Taylor Swift fans flock to London for final leg of Eras Tour after Vienna terrorism plot</h1>
     </div>
     <div class="d-t">
@@ -79,6 +79,7 @@
             Austrian police arrested two men Aug. 7 who allegedly had detailed plans for carrying out attacks on major Vienna events, including Swift's concerts.
             “The main perpetrator confessed that he wanted to carry out a suicide attack with two accomplices. He obtained explosives and weapons," Austrian Chancellor Karl Nehammer said on X Aug. 8. </p>
         </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/e0yv9u0TKQY?si=ucMbNpBtIQwlKW87" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <!-- footer has been started from here -->
