video tag is use

--- a/pages/culture/cultural_news1.html
+++ b/pages/culture/cultural_news1.html
@@ -78,10 +78,14 @@
             the last minute, but he aimed to create a cohesive look that reflected the Indian flags colours. I stand by these uniforms Tahiliani affirmed. While opinions differ I believe 
             in the symbolism and intention behind the design.
             It's time to focus on the medals I think the fashion designer was quoted as saying.
-            The Olympic outfits drew criticism on social media with some labeling them as eyesores and "works of absolute mediocrity.The male athletes were dressed in white kurta pyjamas paired with jackets featuring the saffron and green of the Indian tricolor while the female athletes wore sarees.Former Indian badminton star Jwala Gutta voiced her disappointment on X (formerly Twitter) criticizing the decision to use sarees particularly given that not all female athletes are familiar with draping them. Gutta also expressed concerns about the fit and overall aesthetic of the garments.The garments made for the Indian contingent have been a 
-            huge disappointment Gutta wrote. 
+            The Olympic outfits drew criticism on social media with some labeling them as eyesores and "works of absolute mediocrity.The male athletes were dressed in white kurta pyjamas paired with jackets featuring the saffron and green of the Indian tricolor while the female athletes wore sarees.
         </div>
     </div>
+    
+    <div>
+    <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/bZ5SJhj7Ihc?si=tvgcR9Mdq7cjiLEd&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+    </div>   
+    
 
     <!-- footer has been started from here -->
 
