--- a/pages/culture/cultural_news2.html
+++ b/pages/culture/cultural_news2.html
@@ -70,9 +70,13 @@
             <img src="./../../images/culture22.jpg" alt="Pandit Tanmoy Bose" class="front_img" />
             <div class="information_block">
                 Chinmoy Aspiration-Ground in Queens, New York, honoured tabla exponent Pandit Tanmoy Bose, with the prestigious Sri Chinmoy Culture-Light Award. This award is given to individuals with an extraordinary ability to illuminate humanity through their exceptional contributions in various cultural fields, including music, literature, visual arts, diplomacy, academics, and sports Pandit Bose has played tabla around the globe.I am deeply humbled and honoured to have received the Sri Chinmoy Culture-Light Award. Sri Chinmoys teachings of peace and harmony resonate deeply with my ethos, and I am grateful for this recognition of my efforts to bring the ancient spirit of music to audiences worldwide.
-                Discover how Pt. Tanmoy Bose received the Sri Chinmoy Culture-Light Award for his outstanding tabla performances at the Sri Chinmoy Aspiration-Ground in Queens, New York. Learn more about his contributions to the global cultural landscape. This award inspires me to continue my journey of spreading the light of music and fostering cultural understanding through my creative art said Bose, the maestro.
+                Discover how Pt. Tanmoy Bose received the Sri Chinmoy Culture-Light Award for his outstanding tabla performances at the Sri Chinmoy Aspiration-Ground in Queens, New York. Learn more about his contributions to the global cultural landscape. This award inspires me to continue my journey of spreading the light of music and fostering cultural understanding through my creative art said Bose, the maestro.Tanmoy Bose received the Sri Chinmoy Culture-Light Award for his outstanding tabla performances at the Sri Chinmoy Aspiration-Ground in Queens, New York. Learn more about his contributions to the global.
             </div>
         </div>
+       
+        <div>
+            <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/oSVgO1VvxMQ?si=vbBVj9PS29gc96yy&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+         </div>  
 
         <!-- footer has been started from here -->
 
