--- a/pages/culture/cultural_news5.html
+++ b/pages/culture/cultural_news5.html
@@ -73,6 +73,10 @@
                 Along with their father, they are Gold Medal Winners at the Global Music Awards for their outstanding contribution to the global music industry and excellence in the classical music sphere. This honour was bestowed on them in recognition of their Peace Worshipers album, which was released in July 2017 by Affetto Records and distributed by Naxos. Interestingly, the 10-year-old sons of Ayaan Ali Bangash—Zohaan and Abeer Ali Bangash—are the eighth generation of sarod musicians in the Senia Bangash family. They released their first single Our Love in 2020, which is based on the raga tilak kamod, and has the twins performing a soulful arrangement originally created by Ustad Amjad Ali Khan and arranged by Sai Shravanam.
             </div>
         </div>
+        <div>
+            <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/bZ5SJhj7Ihc?si=tvgcR9Mdq7cjiLEd&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+         </div>  
+
 
         <!-- footer has been started from here -->
 
