--- a/pages/culture/cultural_news6.html
+++ b/pages/culture/cultural_news6.html
@@ -74,6 +74,10 @@
                 Raksha Bandhan is a time to celebrate the bond you share with your sister, and choosing the right gift can make the occasion even more special.Raksha Bandhan, one of the most cherished festivals in India, is a celebration of the special bond between brothers and sisters. Its a day when sisters tie a rakhi (a sacred thread) around their brothers' wrists, symbolizing love and protection. In return, brothers promise to protect their sisters and often give them gifts as a token of their affection.
             </div>
         </div>
+        <div>
+            <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/bZ5SJhj7Ihc?si=tvgcR9Mdq7cjiLEd&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+         </div>  
+
 
         <!-- footer has been started from here -->
 
