--- a/pages/culture/cultural_news3.html
+++ b/pages/culture/cultural_news3.html
@@ -72,13 +72,13 @@
                 Indian philanthropist and businesswoman Nita Ambani has always been in talk for her exquisite jewellery collection, but how can we miss out on her timeless saree collection? Apart from her staple choice, the Banarasi saree, Nita has stunned in numerous traditional sarees for various occasions. Away from the glitz and glam, this time, she opted for an iconic Kerala saree for an event. During an event at the Nita Mukesh Ambani Cultural Center (NMACC), Nita donned a white and gold Kasavu saree by Swadesh. The saree featured a 9-inch golden border, maroon meena kari butta, and tissue pallu, which took over 20 days for Kerala's artisans to complete.
                 Oozing simplicity in her fashion, she complemented her ensemble with minimal gold necklace, earrings and red bangles with golden kada. Her natural beauty was enhanced with minimal makeup and a middle-parted bun.
                 What is Kerala Kasavu Saree?
-                Kasavu sarees have a deep history, originating from regions like Balaramapuram, Chendamangalam, and Kuthampully, highlighting Kerala's rich handloom heritage. It is a traditional attire from Kerala, known for its elegant and simple designs. These sarees feature a distinctive use of zari, a type of gold thread, especially on the borders. The production of Kasavu sarees involves meticulous hand weaving. It typically boasts a plain white fabric with a selvedge border and minimal patterns achieved through weft inlay or jacquard techniques. The thickness and colour of the border depend on the occasion, with ceremonial sarees often having thicker gold borders. 
+                Kasavu sarees have a deep history, originating from regions like Balaramapuram, Chendamangalam, and Kuthampully, highlighting Kerala's rich handloom heritage. It is a traditional attire from Kerala, known for its elegant and simple designs. These sarees feature a distinctive use of zari, a type of gold thread, especially on the borders. The production of Kasavu sarees involves meticulous hand weaving. It typically boasts a plain white fabric with a selvedge border and minimal patterns achieved through weft inlay or jacquard techniques. 
                 
             </div>
         </div>
 
         <div>
-            <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/bZ5SJhj7Ihc?si=tvgcR9Mdq7cjiLEd&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+            <center><iframe width="1100" height="500" src="https://www.youtube.com/embed/U-f5Q9odYEs?si=Con1rBY1NXq_3j9E&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
          </div>  
 
 
