Youtube links embedded

--- a/pages/Education/card1.html
+++ b/pages/Education/card1.html
@@ -100,7 +100,8 @@
 
             So, once again, AI can help keep the community alive and network with each other. So everywhere,
             actually, AI is there in what the faculty does.
-        </div>
+        </div><br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nNpeqWArIjs?si=oHN7EBMKpk_FnRdc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
         <!-- footer has been started from here -->
