--- a/pages/Education/card3.html
+++ b/pages/Education/card3.html
@@ -93,6 +93,7 @@
             "So we have decided, 75,000 new seats will be created in the medical line in the next five years," Modi
             added.
        </div>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/zN0BcihO1sE?si=ffyQl3gGnrNVNvvx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      </div>
                  <!-- footer has been started from here -->
 
