--- a/pages/Education/card4.html
+++ b/pages/Education/card4.html
@@ -91,6 +91,7 @@
             Indians could do this, then 140 CR Indians of my family can do wonders if they take one pledge then despite
             all challenges we can make a Viksit Bharat by 2047," PM Modi said.
         </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/55R74jJnJN4?si=J8O25OmLwfMNc97M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
                  <!-- footer has been started from here -->
