--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -156,7 +156,7 @@
                         <hr>
                         <a href="../Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <a href="../Business/Business_News.html"><button>Load More +</button>
+                    <a href="../Business/Business_News.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
