--- a/pages/worldnews/worldnews.html
+++ b/pages/worldnews/worldnews.html
@@ -44,7 +44,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li class="selected-navbar"><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li class="selected-navbar"><a href="#">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
