--- a/pages/Education/card2.html
+++ b/pages/Education/card2.html
@@ -93,6 +93,7 @@
 
 
  </div>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/aQRwSc-cPCQ?si=QXBLLcX8hVSo_QbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
             <!-- footer has been started from here -->
 
