--- a/pages/tech/tech6.html
+++ b/pages/tech/tech6.html
@@ -16,9 +16,9 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>
-                        <li><a href="./../aboutusPage.html">About</a></li>
-                        <li><a href="./../contact.html">Contact</a></li>
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
                         <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
