--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -136,7 +136,7 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a href="./pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
+                        <a href="./../sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
                         <a href="./pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
