--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -138,7 +138,7 @@
                     <div>
                         <a href="./../sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a href="./pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
+                        <a href="./../Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
                         <a href="./pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
