--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -140,7 +140,7 @@
                         <hr>
                         <a href="./../Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a href="./pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
+                        <a href="./../Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
                         <a href="./pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
