--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -142,7 +142,7 @@
                         <hr>
                         <a href="./../Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a href="./pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
+                        <a href="./../Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
                     <a href="./pages/Education/education.html"><button>Load More +</button></a>
                 </div>
