--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -144,7 +144,7 @@
                         <hr>
                         <a href="./../Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <a href="./pages/Education/education.html"><button>Load More +</button></a>
+                    <a href="./tech.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
